# satpy

./: .bandit  .bumpversion.cfg  .codebeatignore  .deepsource.toml  .gitattributes  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  MANIFEST.in  README  README.md  README.rst  RELEASE-VERSION  RELEASING.md  SECURITY.md  appveyor.yml  asv.conf.json  changelog.rst  changelog_pre0.9.0.rst  peed:  pyproject.toml  quickstart_seviri.py  satpy-env_np111py27.yml  setup.cfg  setup.py  test.nc  version.py  versioneer.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  deploy-sdist.yaml
benchmarks/: __init__.py  abi_l1b_benchmarks.py  ahi_hsd_benchmarks.py  benchmarks.py  fci_benchmarks.py  performance_test.py  seviri_hrit_benchmarks.py  utils.py  viirs_sdr_benchmarks.py
ci/py37/: environment.yaml
ci/py38/: environment.yaml
continuous_integration/: environment.yaml
doc/: Makefile  README  rtd_environment.yml
doc/examples/: geo_hrit.py  polar_aapp1b.py  polar_maia.py  polar_segments.py
doc/notebooks/: polar_maia.ipynb
doc/source/: area_def_list.py  composites.rst  conf.py  config.rst  data_download.rst  dev_guide.rst  docutils.conf  doi_role.py  enhancements.rst  examples.rst  faq.rst  generate_area_def_list.py  geo_image.rst  image.rst  index.rst  input.rst  install.rst  modifiers.rst  mpop.composites.rst  mpop.imageo.formats.rst  mpop.readers.rst  mpop.rst  mpop.writers.rst  multiscene.rst  organization.rst  overview.rst  performance_test.rst  performance_tests.rst  pp.rst  quickstart.rst  quickstart_seviri.rst  reader_table.py  readers.rst  readers_formats.rst  reading.rst  remote_reading.rst  resample.rst  rs_images.rst  satellites_h.rst  satpy.composites.rst  (+6 more)
etc/: .profile_msgpp.in  EARSMetop-A.cfg.template  EARSNOAA-19.cfg.template  EARSSuomi-NPPs.cfg.template  EOS-Aqua.cfg.template  EOS-Terra.cfg.template  Electro-L_N1.cfg.template  FY-3A.cfg.template  GDSMetop-B.cfg.template  GOES-13.cfg.template  GOES-15.cfg.template  Himawari-6.cfg.template  Himawari-7.cfg.template  Meteosat-10.cfg.template  Meteosat-11.cfg.template  Meteosat-7.cfg.template  Meteosat-9.cfg.template  NOAA-15.cfg.template  NOAA-18.cfg.template  Suomi-NPP.cfg.template  TerraSAR-X.cfg.template  aqua.cfg.template  areas.def  areas.def.template  composites.cfg  composites_viirs.cfg  earsnpp.cfg.template  electro-ln1.cfg.template  fengyun3a.cfg.template  geo_image.cfg  himawari-8.cfg  meteosat07.cfg.template  meteosat09.cfg.template  meteosat10.cfg.template  mipp_xrit.cfg  mpop.cfg  mpop.cfg.template  mtsat2.cfg.template  ninjotiff_products.cfg.template  noaa17.cfg.template  (+7 more)
etc/composites/: ahi.yaml  generic.cfg  olci.yaml  seviri.yaml  viirs.cfg  viirs.yaml  visir.yaml
etc/enhancements/: generic.cfg
etc/readers/: aapp_l1b.yaml  ahi_hsd.yaml  amsr2.yaml  amsr2_l1b.yaml  eps_l1b.cfg  epsl1b.yaml  fci_fdhsi.yaml  ghrsst_osisaf.yaml  hdfeos_l1b.yaml  hrpt.yaml  mipp_h8.yaml  mipp_xrit.cfg  mipp_xrit.yaml  nucaps.cfg  nucaps.yaml  olci.yaml  omps_edr.cfg  viirs_compact.yaml  viirs_l1b.cfg  viirs_l1b.yaml  viirs_sdr.cfg  viirs_sdr.yaml
etc/writers/: geotiff.cfg  simple_image.cfg
imageo/: __init__.py  geo_image.py  image.py  image_processing.py  logger.py  test_geo_image.py  test_image.py
mpop/: __init__.py  channel.py  compositer.py  logger.py  newscene.py  plugin_base.py  projectable.py  projector.py  resample.py  scene.py  test_channel.py  test_projector.py  test_scene.py  tools.py  utils.py  version.py  viirs_composites.py
mpop/composites/: __init__.py  viirs.py
mpop/imageo/: __init__.py  geo_image.py  image.py  image_processing.py  logger.py  palettes.py  test_geo_image.py  test_image.py
mpop/instruments/: avhrr.py  modis.py  mviri.py  sarx.py  seviri.py  test_avhrr.py  test_mviri.py  test_seviri.py  test_visir.py  viirs.py  visir.py
mpop/plugins/: __init__.py
mpop/readers/: __init__.py  eps_l1b.py  mipp_xrit.py  viirs_sdr.py
mpop/satellites/: __init__.py  meteosat09.py  test_satellites.py
mpop/satin/: __init__.py  aapp1a.py  aapp1b.py  ahamap_aapp1b.py  eps1a.py  eps_avhrr.py  eps_avhrrl1b.py  eps_l1b.py  epsr.py  fy3_mersi_aggr1km.py  h5_pps_l2.py  hdfeos_l1b.py  helper_functions.py  hrpt.py  hrpt_hmf.py  logger.py  meris_level2.py  mipp.py  mipp_xrit.py  mipp_xsar.py  modis_level2.py  msg_ctth.py  msg_ctype.py  msg_hdf.py  msg_hrit.py  nc_pps_l2.py  nc_reader.py  nwcsaf_pps.py  nwcsaf_pps_v2014.py  odim.py  pps_hdf.py  pps_odim.py  test_mipp.py  test_viirs_sdr.py  thin_modis.py  umarf_native.py  viirs_compact.py  viirs_sdr.py  xmlformat.py
mpop/satout/: __init__.py  cfscene.py  netcdf4.py
mpop/saturn/: __init__.py  assemble_segments.py  filelist.py  filewatcher.py  gatherer.py  runner.py  tasklist.py  (+1 more)
pp/: __init__.py  channel.py  logger.py  projector.py  scene.py  test_channel.py  test_projector.py  test_scene.py  utils.py
satin/: __init__.py  aapp1a.py  aapp1b.py  eps1a.py  eps_avhrr.py  fy3_mersi_aggr1km.py  hrpt.py  logger.py  mipp.py  msg_ctth.py  msg_ctype.py  msg_hrit.py  nc_reader.py  pynwclib.c  test_mipp.py  test_plugin.py  thin_modis.py
satout/: __init__.py  cfscene.py  netcdf4.py  writer.py
satpy/: __init__.py  _compat.py  _config.py  _instruments.py  _scene_converters.py  area.py  aux_download.py  channel.py  config.py  config_utils.py  conftest.py  coords_utils.py  data_download.py  dataset.py  decision_tree.py  dependency_tree.py  formatting_html.py  multiscene.py  node.py  plugin_base.py  projectable.py  resample.py  scene.py  testing.py  tools.py  utils.py  vectorscene.py  version.py
saturn/: __init__.py  filelist.py  filewatcher.py  runner.py  tasklist.py
scripts/: parallax.py  projection.py
test/: run.py  test_doc.py  test_pp_core.py  test_readers.py
travis/: linux_install.sh
utils/: convertToNinjotiff.py  convert_to_ninjotiff.py  coord2area_def.py  create_reference.py  fetch_avhrr_calcoeffs.py
(+1284 files in other folders)
