[options]
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[bdist_rpm]
requires=h5py pyresample python2-numexpr pyhdf xarray dask h5netcdf
release=1
doc_files = doc/Makefile doc/source/*.rst doc/examples/*.py

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120
exclude =
    satpy/readers/li_l2.py
